--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@react-navigation/native": "^6.0.8",
     "react": "17.0.2",
     "react-native": "0.67.4",
+    "react-native-background-geolocation": "^4.4.6",
+    "react-native-maps": "^0.30.1",
     "react-native-safe-area-context": "^4.2.4",
     "react-native-screens": "^3.13.1"
   },
