--- a/android/build.gradle
+++ b/android/build.gradle
@@ -3,10 +3,13 @@
 buildscript {
     ext {
         buildToolsVersion = "30.0.2"
-        minSdkVersion = 21
+        minSdkVersion = 23
         compileSdkVersion = 30
         targetSdkVersion = 30
+        supportLibVersion = "28.0.0"
         ndkVersion = "21.4.7075529"
+        appCompatVersion = "1.1.0"
+        googlePlayServicesLocationVersion = "19.0.1" 
     }
     repositories {
         google()
@@ -29,6 +32,15 @@ allprojects {
             // Android JSC is installed from npm
             url("$rootDir/../node_modules/jsc-android/dist")
         }
+        maven {
+            // Required for react-native-background-geolocation
+            url("${project(':react-native-background-geolocation').projectDir}/libs")
+        }
+        maven {
+            // Required for react-native-background-fetch
+            url("${project(':react-native-background-fetch').projectDir}/libs")
+        }
+    
         mavenCentral {
             // We don't want to fetch react-native from Maven Central as there are
             // older versions over there.
