--- a/package.json
+++ b/package.json
@@ -10,11 +10,16 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
+    "@react-native-community/geolocation": "^2.0.2",
+    "@react-navigation/bottom-tabs": "^6.2.0",
     "@react-navigation/native": "^6.0.8",
     "react": "17.0.2",
     "react-native": "0.67.4",
+    "react-native-background-fetch": "^4.0.5",
     "react-native-background-geolocation": "^4.4.6",
+    "react-native-flash-message": "^0.2.1",
     "react-native-maps": "^0.30.1",
+    "react-native-permissions": "^3.3.1",
     "react-native-safe-area-context": "^4.2.4",
     "react-native-screens": "^3.13.1"
   },
